WebVR: fix incorrect renderWidth for the right eye

BUG=670090

Review-Url: https://codereview.chromium.org/2544503003
Cr-Commit-Position: refs/heads/master@{#435476}

Former-commit-id: d15259836e63edf641b563e6dc7abaf15f51507e